# agent-runtime

./: .gitignore  CLAUDE.md  README.md  prd-agent-engine-v2.md  pyproject.toml
agent-engine/: arch.md  main.py  pyproject.toml
agent-engine/commands/: __init__.py  base.py  compact.py  help.py  history.py  log.py  registry.py
agent-engine/context/: budget.py  compact.py  prompt.py
agent-engine/engine/: dry_run.py  loop.py  recovery.py  session_log.py  state.py
agent-engine/entrypoints/: cli.py  display.py  sdk.py
agent-engine/roles/: config.py
agent-engine/tests/: test_agent_tool.py  test_bash.py  test_budget.py  test_cli_commands.py  test_compact.py  test_config.py  test_display.py  test_dry_run.py  test_edit.py  test_grep.py  test_loop.py  test_permission.py  test_prompt.py  test_read_file.py  test_recovery.py  test_registry.py  test_session_log.py  test_state.py  test_verifier.py  test_write_file.py
agent-engine/tools/: agent_tool.py  base.py  bash.py  edit.py  grep.py  permission.py  read_file.py  registry.py  write_file.py
agent-engine/verify/: verifier.py
agent_runtime/: __init__.py  __main__.py  app.py  compaction.py  context.py  dev.py  memory.py  models.py  provider.py  query_loop.py  roles.py  storage.py
agent_runtime/agents/: __init__.py  config.py  coordinator.py  manager.py
agent_runtime/cli/: app.py  bus.py  commands.py  dev.py  display.py  prompt_view.py
agent_runtime/engine/: __init__.py  compaction.py  loop.py  (+1 more)
docs/: AGENT_DESIGN_PHILOSOPHY.md  DEVELOPER_GUIDE.md  PRD-agent-runtime.md
tasks/: multi-agent-plan.md  todo.md
(+34 files in other folders)
