[project]
name = "agent-runtime"
version = "0.1.0"
description = "A minimal agent runtime kernel in modern Python"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agent_runtime/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
