[project]
name = "agent-engine"
version = "0.1.0"
description = "A Python agent engine template learning from production-grade coding agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
agent-engine = "main:main"

[tool.setuptools.packages.find]
include = ["engine*", "tools*", "context*", "roles*", "verify*", "entrypoints*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
